--- a/Destapa-Cañerias/Destapacaños-truper-home-depot.html
+++ b/Destapa-Cañerias/Destapacaños-truper-home-depot.html
@@ -138,27 +138,27 @@ Destapacaños truper home depot - Boric acid in alcohol
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Remedios-caseros-para-destapar-cañerias-viejas.html">Remedios caseros para destapar cañerias viejas </a> 
+       <a href="../Destapa-Cañerias/Sonda-destapacaños-pretul.html">Sonda destapacaños pretul </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Como-destapar-cañerias-de-desague-de-cocina.html">Como destapar cañerias de desague de cocina </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Precios.html">Destapaciones Precios </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Para-que-sirve-el-alcohol-boricado.html">Para que sirve el alcohol boricado </a> 
+       <a href="../Servicios/Destapador-de-cañerias-casero.html">Destapador de cañerias casero </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Limpieza-De-Cañerias.html">Limpieza De Cañerias </a> 
+       <a href="../Servicios/En-que-objetos-se-encuentra-la-plata.html">En que objetos se encuentra la plata </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Liquido-destapa-cañerias-casero.html">Liquido destapa cañerias casero </a> 
+       <a href="../Destapa-Cañerias/Harpic-destop-instrucciones-de-uso.html">Harpic destop instrucciones de uso </a> 
          </li>
 <!--EndPostsList-->
 
@@ -221,7 +221,22 @@ Destapacaños truper home depot - Boric acid in alcohol
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapacaños-truper-para-taladro.html">Destapacaños truper para taladro </a> 
+       <a href="../Destapa-Cañerias/Renta-de-destapacaños-home-depot.html">Renta de destapacaños home depot </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Servicios/Bomba-para-destapar-inodoros.html">Bomba para destapar inodoros </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Destapador-De-Baño.html">Destapador De Baño </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Harpic-destapacaños-como-se-usa.html">Harpic destapacaños como se usa </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
@@ -231,22 +246,7 @@ Destapacaños truper home depot - Boric acid in alcohol
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-hacer-para-destapar-el-inodoro-sin-sopapa.html">Como hacer para destapar el inodoro sin sopapa </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-De-Cloacas-Precios.html">Destapaciones De Cloacas Precios </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-de-cloacas-miramar.html">Destapaciones de cloacas miramar </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-De-Cloacas.html">Destapaciones De Cloacas </a> 
+       <a href="../Servicios/Dans-quel-pays-est-bahia-bla.html">Dans quel pays est bahia bla </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
@@ -256,22 +256,22 @@ Destapacaños truper home depot - Boric acid in alcohol
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapacaños-manual-precio.html">Destapacaños manual precio </a> 
+       <a href="../Destapa-Cañerias/Remedios-caseros-para-destapar-cañerias.html">Remedios caseros para destapar cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-Precios.html">Destapaciones Precios </a> 
+       <a href="../Destapa-Cañerias/Destapacaños-pretul-como-se-usa.html">Destapacaños pretul como se usa </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapación-De-Cañerías.html">Destapación De Cañerías </a> 
+       <a href="../Servicios/Harpic-destapacaños-inodoro.html">Harpic destapacaños inodoro </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Merclin-destapa-cañerias-concentrado.html">Merclin destapa cañerias concentrado </a> 
+       <a href="../Destapa-Cañerias/Alcohol-boricado-para-que-sirve.html">Alcohol boricado para que sirve </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
